--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "lodash-es": "^4.17.21",
+    "node-schedule": "^2.1.0",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.2",
     "vue-roller": "^1.12.7",
