--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.24.0",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
+    "gsap": "^3.10.4",
     "lodash-es": "^4.17.21",
     "node-schedule": "^2.1.0",
     "vue": "^2.6.11",
