--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eboard",
+  "name": "epapan",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -25,6 +25,9 @@
     "vue-roller": "^1.12.7",
     "vue-rolling-number": "^0.1.4",
     "vue-router": "^3.5.3",
+    "vue-toast-notification": "^0.6.3",
+    "vue-toasted": "^1.1.28",
+    "vuedraggable": "^2.24.3",
     "vuetify": "^2.4.0",
     "vuex": "^3.6.2"
   },
