--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --port 8080",
-    "build": "vue-cli-service build",
+    "dev": "vue-cli-service serve --mode dev --port 8080",
+    "serve": "vue-cli-service serve --mode prd --port 8080",
+    "build": "vue-cli-service build --mode prd --port 8080",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
@@ -20,6 +21,7 @@
     "gsap": "^3.10.4",
     "lodash-es": "^4.17.21",
     "node-schedule": "^2.1.0",
+    "path": "^0.12.7",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.2",
     "vue-roller": "^1.12.7",
