--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve --mode dev --port 8080",
     "serve": "vue-cli-service serve --mode prd --port 8080",
     "build": "vue-cli-service build --mode prd --port 8080",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "dev": "vue-cli-service serve --mode dev --port 8080"
   },
   "dependencies": {
     "@mdi/js": "^6.5.95",
@@ -22,6 +22,7 @@
     "lodash-es": "^4.17.21",
     "node-schedule": "^2.1.0",
     "path": "^0.12.7",
+    "register-service-worker": "^1.7.2",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.2",
     "vue-roller": "^1.12.7",
@@ -37,6 +38,7 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-pwa": "^4.5.19",
     "@vue/cli-plugin-unit-jest": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
