--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve --mode dev --port 8080",
-    "serve": "vue-cli-service serve --mode prd --port 8080",
-    "build": "vue-cli-service build --mode prd --port 8080",
+    "dev": "vue-cli-service serve --mode development --port 8080",
+    "serve": "vue-cli-service serve --mode production --port 8080",
+    "build": "vue-cli-service build --mode production --port 8080",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
@@ -18,17 +18,23 @@
     "axios": "^0.24.0",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
+    "date-fns": "^2.30.0",
     "gsap": "^3.10.4",
     "lodash-es": "^4.17.21",
     "node-schedule": "^2.1.0",
     "path": "^0.12.7",
+    "qrcode.vue": "^1.7.0",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.2",
+    "vue-iframes": "^0.0.20",
+    "vue-qrcode": "^2.2.0",
+    "vue-qrcode-reader": "^3.1.6",
     "vue-roller": "^1.12.7",
     "vue-rolling-number": "^0.1.4",
     "vue-router": "^3.5.3",
     "vue-toast-notification": "^0.6.3",
     "vue-toasted": "^1.1.28",
+    "vue2-perfect-scrollbar": "^1.5.56",
     "vuedraggable": "^2.24.3",
     "vuetify": "^2.4.0",
     "vuex": "^3.6.2"
@@ -45,12 +51,13 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
+    "html5-qrcode": "^2.3.8",
     "material-design-icons-iconfont": "^6.1.1",
     "prettier": "^2.2.1",
     "sass": "^1.32.13",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.4.5",
-    "vue-template-compiler": "^2.6.11",
+    "vue-template-compiler": "^2.7.14",
     "vuetify-loader": "^1.7.0"
   }
 }
