--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VUE_APP_API_URL = http://172.16.252.101:3000
-VUE_APP_CHK_AUH = true  
+VUE_APP_API_URL = https://epapanapis.malaysia.coway.do/api
+VUE_APP_CHK_AUH = true
