--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "core-js": "^3.6.5",
     "date-fns": "^2.30.0",
     "gsap": "^3.10.4",
+    "html2pdf.js": "^0.10.1",
+    "jspdf": "^2.5.1",
     "lodash-es": "^4.17.21",
     "node-schedule": "^2.1.0",
     "path": "^0.12.7",
@@ -28,6 +30,9 @@
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.2",
     "vue-iframes": "^0.0.20",
+    "vue-js-modal": "^2.0.1",
+    "vue-modaltor": "^1.5.4",
+    "vue-pwa-install": "^1.1.0",
     "vue-qrcode": "^2.2.0",
     "vue-qrcode-reader": "^3.1.6",
     "vue-roller": "^1.12.7",
