--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "dependencies": {
     "@mdi/js": "^6.5.95",
     "@types/lodash-es": "^4.17.6",
-    "@vue/composition-api": "^1.4.9",
+    "@vue/composition-api": "^1.7.2",
     "@vuetify/cli-plugin-utils": "0.0.10",
     "@vueuse/core": "^10.7.2",
     "apexcharts": "^3.33.2",
     "axios": "^0.24.0",
     "chart.js": "^2.9.4",
+    "core-js": "^3.6.5",
     "date-fns": "^2.30.0",
     "file-saver": "^2.0.5",
     "form-data": "^4.0.0",
@@ -27,21 +28,20 @@
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
     "lodash-es": "^4.17.21",
-    "moment": "^2.30.1",
     "node-schedule": "^2.1.0",
     "path": "^0.12.7",
     "qrcode.vue": "^1.7.0",
     "quill-image-drop-module": "^1.0.3",
     "register-service-worker": "^1.7.2",
     "swiper": "^4.5.1",
-    "vue": "^2.6.11",
+    "vue": "^2.7.16",
     "vue-apexcharts": "^1.6.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-iframes": "^0.0.20",
     "vue-js-modal": "^2.0.1",
     "vue-modaltor": "^1.5.4",
     "vue-pwa-install": "^1.1.0",
-    "vue-qrcode": "^3.0.0",
+    "vue-qrcode": "^2.2.0",
     "vue-qrcode-reader": "^3.1.6",
     "vue-quill-editor": "^3.0.6",
     "vue-roller": "^1.12.7",
@@ -72,10 +72,12 @@
     "html5-qrcode": "^2.3.8",
     "material-design-icons-iconfont": "^6.1.1",
     "prettier": "^2.2.1",
+    "rollup-plugin-sass-migrator": "^1.0.5",
     "sass": "^1.32.13",
     "sass-loader": "^10.0.0",
+    "sass-migrator": "^2.0.3",
     "vue-cli-plugin-vuetify": "~2.4.5",
-    "vue-template-compiler": "^2.6.14",
+    "vue-template-compiler": "^2.7.14",
     "vuetify-loader": "^1.7.0"
   }
 }
