--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "dependencies": {
     "@mdi/js": "^6.5.95",
     "@types/lodash-es": "^4.17.6",
-    "@vue/composition-api": "^1.7.2",
     "@vuetify/cli-plugin-utils": "0.0.10",
-    "@vueuse/core": "^10.7.2",
+    "@vueuse/core": "^10.9.0",
     "apexcharts": "^3.33.2",
     "axios": "^0.24.0",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
+    "curlconverter": "^4.10.1",
     "date-fns": "^2.30.0",
     "file-saver": "^2.0.5",
     "form-data": "^4.0.0",
@@ -34,11 +34,12 @@
     "quill-image-drop-module": "^1.0.3",
     "register-service-worker": "^1.7.2",
     "swiper": "^4.5.1",
-    "vue": "^2.7.16",
+    "vue": "^2.7.14",
     "vue-apexcharts": "^1.6.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-iframes": "^0.0.20",
     "vue-js-modal": "^2.0.1",
+    "vue-loader": "^15.11.1",
     "vue-modaltor": "^1.5.4",
     "vue-pwa-install": "^1.1.0",
     "vue-qrcode": "^2.2.0",
@@ -53,16 +54,17 @@
     "vue2-perfect-scrollbar": "^1.5.56",
     "vuedraggable": "^2.24.3",
     "vuelidate": "^0.7.7",
-    "vuetify": "^2.4.0",
-    "vuex": "^3.6.2"
+    "vuetify": "^2.6.1",
+    "vuex": "^3.6.2",
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-pwa": "^4.5.19",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^4.5.15",
+    "@vue/cli-plugin-eslint": "^4.5.15",
+    "@vue/cli-plugin-pwa": "^4.5.15",
+    "@vue/cli-plugin-unit-jest": "^4.5.15",
+    "@vue/cli-service": "^4.5.15",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
@@ -72,10 +74,8 @@
     "html5-qrcode": "^2.3.8",
     "material-design-icons-iconfont": "^6.1.1",
     "prettier": "^2.2.1",
-    "rollup-plugin-sass-migrator": "^1.0.5",
-    "sass": "^1.32.13",
+    "sass": "^1.32.11",
     "sass-loader": "^10.0.0",
-    "sass-migrator": "^2.0.3",
     "vue-cli-plugin-vuetify": "~2.4.5",
     "vue-template-compiler": "^2.7.14",
     "vuetify-loader": "^1.7.0"
